# databarn

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  barn.py  databarn.py  model_test_output.txt  pyproject.toml  seed.py  setup.py  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_all.txt  test_output_cob.txt  test_output_cob_2.txt  test_results.txt  test_results_2.txt
.github/workflows/: ci.yml
databarn/: __init__.py  _dna.py  barn.py  cob.py  constants.py  decorators.py  dna.py  exceptions.py  field.py  funcs.py  grain.py  new_dna.py  seed.py  seed_queue.py  simplidatabarn.py  trails.py  types.py
dist_check/: databarn-1.7-py3-none-any.whl
docs/: CHANGELOG.md  project_overview.md
tests/: bla.py  misc_tests.py  model_samples.py  run_tests.py  test_all.py  test_barn.py  test_barn_extra.py  test_cob.py  test_cob_plus.py  test_copy.py  test_decorators.py  test_dna.py  test_dna_methods.py  test_funcs.py  test_grain.py  test_misc.py  test_readme_examples.py  test_trails.py  test_untested_features.py
tests/knoxnotation/: Old_README.md  README.md  expected-output.html  knoxtohtml.py  output.html
tests/knoxnotation/common/: trail.py
tests/knoxnotation/docs/: Knox-Basic-Syntax.knox  Knox-Comprehensive-Syntax.knox  markdown-test.md  test1.knox  test2.knox  test3.knox  test4.knox
tests/knoxnotation/notation/: map.py  parserlib.py
