[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databarn"
version = "1.10.0"
description = "Dictionary with Dot Notation • Schema definitions • Type validation • Lightweight in-memory ORM"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Eduardo Bandeira", email = "eduardowbandeira@gmail.com" },
]
keywords = ["dict", "dot-notation", "schema", "validation", "orm", "dataclass"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "beartype~=0.22",
]

[project.urls]
Homepage = "https://github.com/eduardo-w-bandeira/databarn"
Repository = "https://github.com/eduardo-w-bandeira/databarn"
Issues = "https://github.com/eduardo-w-bandeira/databarn/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "coverage[toml]>=7.6",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["databarn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=databarn --cov-branch --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["databarn"]

[tool.coverage.report]
show_missing = true
skip_covered = true
